test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void/void_function.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: foo
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 0
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: set_foo_to_positive_num
        List[1]: 
          TIdentifier: a
        CB: 
          List[3]: 
            CS: 
              CIf: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          None: 
                None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: foo
                    None: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  None: 
            CS: 
              CReturn: 
                None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: do_nothing
        List[0]: 
        CB: 
          List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: set_foo_to_positive_num
                  List[1]: 
                    CUnary: 
                      CNegate: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                  None: 
            CS: 
              CIf: 
                CVar: 
                  TIdentifier: foo
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: set_foo_to_positive_num
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 12
                      None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: foo
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 12
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: do_nothing
                  List[0]: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
